@@ -18,7 +18,6 @@ import jakarta.inject.Inject;
 import jakarta.inject.Named;
 
 import org.apache.commons.collections4.CollectionUtils;
-import org.primefaces.model.charts.line.LineChartModel;
 
 import de.l3s.learnweb.dashboard.CommonDashboardUserBean;
 import de.l3s.learnweb.dashboard.activity.ActivityDashboardChartsFactory.ActivityGraphData;
@@ -32,12 +31,12 @@ public class ActivityDashboardBean extends CommonDashboardUserBean implements Se
     @Serial
     private static final long serialVersionUID = 3326736281893564706L;
 
-    private Map<String, String> actions;
-    private List<SelectItemGroup> groupedActions;
-    private List<String> selectedActionItems;
-    private List<Integer> selectedGroupedActions;
+    private TreeMap<String, String> actions;
+    private ArrayList<SelectItemGroup> groupedActions;
+    private ArrayList<String> selectedActionItems;
+    private ArrayList<Integer> selectedGroupedActions;
 
-    private transient LineChartModel interactionsChart;
+    private transient String interactionsChart;
     private transient List<Map<String, Object>> interactionsTable;
 
     @Inject
@@ -116,7 +115,7 @@ public class ActivityDashboardBean extends CommonDashboardUserBean implements Se
         }
     }
 
-    public LineChartModel getInteractionsChart() {
+    public String getInteractionsChart() {
         if (null == interactionsChart) {
             fetchDataFromManager();
         }
@@ -137,35 +136,35 @@ public class ActivityDashboardBean extends CommonDashboardUserBean implements Se
             return null;
         }
 
-        return getInteractionsTable().isEmpty() ? new HashSet<>() : interactionsTable.get(0).keySet();
+        return getInteractionsTable().isEmpty() ? new HashSet<>() : interactionsTable.getFirst().keySet();
     }
 
     public Map<String, String> getActions() {
         return actions;
     }
 
-    public List<String> getSelectedActionItems() {
+    public ArrayList<String> getSelectedActionItems() {
         return selectedActionItems;
     }
 
-    public void setSelectedActionItems(List<String> selectedActionItems) {
+    public void setSelectedActionItems(ArrayList<String> selectedActionItems) {
         this.selectedGroupedActions = null;
         this.selectedActionItems = selectedActionItems;
     }
 
-    public List<SelectItemGroup> getGroupedActions() {
+    public ArrayList<SelectItemGroup> getGroupedActions() {
         return groupedActions;
     }
 
-    public void setGroupedActions(List<SelectItemGroup> groupedActions) {
+    public void setGroupedActions(ArrayList<SelectItemGroup> groupedActions) {
         this.groupedActions = groupedActions;
     }
 
-    public List<Integer> getSelectedGroupedActions() {
+    public ArrayList<Integer> getSelectedGroupedActions() {
         return selectedGroupedActions;
     }
 
-    public void setSelectedGroupedActions(List<Integer> selectedGroupedActions) {
+    public void setSelectedGroupedActions(ArrayList<Integer> selectedGroupedActions) {
         this.selectedActionItems = null;
         this.selectedGroupedActions = selectedGroupedActions;
     }
