@@ -3,7 +3,6 @@ package de.l3s.learnweb.group;
 import java.io.Serial;
 import java.io.Serializable;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import jakarta.annotation.PostConstruct;
 import jakarta.faces.application.FacesMessage;
@@ -22,8 +21,6 @@ import de.l3s.learnweb.beans.BeanAssert;
 import de.l3s.learnweb.logging.Action;
 import de.l3s.learnweb.searchhistory.RecognisedEntity;
 import de.l3s.learnweb.searchhistory.dbpediaspotlight.DbpediaSpotlightService;
-import de.l3s.learnweb.user.Course;
-import de.l3s.learnweb.user.Course.Option;
 import de.l3s.learnweb.user.User;
 
 @Named
@@ -33,12 +30,11 @@ public class GroupsBean extends ApplicationBean implements Serializable {
     @Serial
     private static final long serialVersionUID = 5364340827474357098L;
 
-    private List<Group> joinAbleGroups;
-    private List<Group> myGroups;
-    private Group selectedGroup;
+    private transient List<Group> joinAbleGroups;
+    private transient List<Group> myGroups;
+    private transient Group selectedGroup;
 
-    private Group newGroup;
-    private List<Course> editAbleCourses; // courses to which the user can add groups to
+    private transient Group newGroup;
 
     @Inject
     private GroupDao groupDao;
@@ -53,8 +49,6 @@ public class GroupsBean extends ApplicationBean implements Serializable {
         joinAbleGroups = groupDao.findJoinAble(getUser());
         myGroups = user.getGroups();
         newGroup = new Group();
-
-        editAbleCourses = user.getCourses().stream().filter(course -> !course.getOption(Option.Groups_Only_moderators_can_create_groups)).collect(Collectors.toList());
     }
 
     public void joinGroup() {
@@ -64,11 +58,9 @@ public class GroupsBean extends ApplicationBean implements Serializable {
             return;
         }
 
-        if (selectedGroup.isMemberCountLimited()) {
-            if (selectedGroup.getMemberCount() >= selectedGroup.getMaxMemberCount()) {
-                addMessage(FacesMessage.SEVERITY_ERROR, "group_full");
-                return;
-            }
+        if (selectedGroup.isMemberCountLimited() && (selectedGroup.getMemberCount() >= selectedGroup.getMaxMemberCount())) {
+            addMessage(FacesMessage.SEVERITY_ERROR, "group_full");
+            return;
         }
 
         user.joinGroup(selectedGroup);
@@ -127,7 +119,7 @@ public class GroupsBean extends ApplicationBean implements Serializable {
         newGroup.setLeader(user);
 
         if (newGroup.getCourseId() == 0) { // this happens when the user is only member of a single course and the course selector isn't shown
-            newGroup.setCourseId(user.getCourses().get(0).getId());
+            newGroup.setCourseId(user.getCourses().getFirst().getId());
         }
         groupDao.save(newGroup);
         user.joinGroup(newGroup);
@@ -172,9 +164,5 @@ public class GroupsBean extends ApplicationBean implements Serializable {
 
     public void setSelectedGroup(Group selectedGroup) {
         this.selectedGroup = selectedGroup;
-    }
-
-    public List<Course> getEditAbleCourses() {
-        return editAbleCourses;
     }
 }
